
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pthread_t ;
typedef scalar_t__ io_service_t ;
typedef scalar_t__ io_connect_t ;


 scalar_t__ IOServiceGetMatchingService (int ,int ) ;
 int IOServiceMatching (char*) ;
 int IOServiceOpen (scalar_t__,int ,int,scalar_t__*) ;
 scalar_t__ MACH_PORT_NULL ;
 int close_it (scalar_t__) ;
 scalar_t__ conn ;
 scalar_t__ go ;
 int kIOMasterPortDefault ;
 int mach_task_self () ;
 int printf (char*) ;
 int pthread_create (int *,int *,void*,void*) ;
 int pthread_join (int ,int *) ;
 int start ;
 int usleep (int) ;

int main(int argc, char** argv) {
  char* service_name = "IntelAccelerator";
  int client_type = 4;

  io_service_t service = IOServiceGetMatchingService(kIOMasterPortDefault, IOServiceMatching(service_name));
  if (service == MACH_PORT_NULL) {
    printf("can't find service\n");
    return 0;
  }

  IOServiceOpen(service, mach_task_self(), client_type, &conn);
  if (conn == MACH_PORT_NULL) {
    printf("can't connect to service\n");
    return 0;
  }

  pthread_t t;
  io_connect_t arg = conn;
  pthread_create(&t, ((void*)0), (void*) go, (void*) &arg);

  usleep(100000);

  start = 1;

  close_it(conn);

  pthread_join(t, ((void*)0));

  return 0;
}
